# nrf52_ble_app_template

./: .gitignore  CMakeLists.txt  README.md  ble_app_template.cmake  ble_app_template.uvoptx  ble_app_template.uvprojx  ble_app_template_nRF52832.uvprojx  cmake_cross_platform.h  environment.cmake.template  main.c  nrf_utils.h
RTE/_App__nRF52832_xxAA_/: RTE_Components.h
RTE/_App__nRF52840_xxAA_/: RTE_Components.h
RTE/_nrf52840_xxaa/: RTE_Components.h
ble/: app_ble.c  app_ble.h
board/: custom_board.h
config/: ble_config.h  sdk_config.h
version/: delete_version_object.bat  version.c  version.h
